<resources>
    <string name="app_name" translatable="false">habitAC</string>
    <string name="nav_drawer_open" translatable="false">Open drawer</string>
    <string name="nav_drawer_close" translatable="false">Close drawer</string>


    <string-array name="habit_name">
        <item>habit</item>
        <item>habit</item>
        <item>habit</item>
        <item>habit</item>
        <item>habit</item>
        <item>habit</item>
        <item>habit</item>

    </string-array>

    <string-array name="description">
        <item>This is a random description </item>
        <item>This is a random description </item>
        <item>This is a random description </item>
        <item>This is a random description </item>
        <item>This is a random description </item>
        <item>This is a random description </item>
        <item>This is a random description </item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="student_name_zhao">剑</string>
    <string name="student_name_wu">头盔</string>
    <string name="student_name_gong">甲胄</string>
    <string name="student_name_chen">战靴</string>
    <string name="student">弓驽</string>
    <string name="shuangshou">双手斧</string>
    <string name="student_information">商品信息</string>
    <string name="student_name">商品名称： </string>
    <string name="student_sex">生命： </string>
    <string name="student_ban">攻击： </string>
    <string name="student_dormitory">防御： </string>
    <string name="student_bed">敏捷： </string>
    <string name="student_class">武器价格： </string>
    <string name="power">战力值</string>
    <string name="warehouse">仓库</string>
    <string name="thanks_using">感谢您对HabitAC的信任 </string>
    <string name="question_ask">如果您有任何问题，请联系我们</string>
    <string name="question_send">期待您的反馈</string>
    <string name="send">发送</string>
    <string name="forgot_password">是否忘记密码？</string>
    <string name="Verification">验证码：</string>
    <string name="Next">下一步</string>
    <string name="Repository">存储库</string>
    <string name="Equipment">装备商店</string>
    <string name="Exp">经验值</string>
    <string name="Coin">金币值</string>
    <string name="You_Have">你还有 \t</string>
    <string name="tasks_togo">\t项工作需要完成！</string>
    <string name="TODO">未完成:</string>
    <string name="Completed">已完成:</string>
    <string name="ToDoList">今日任务完成情况:</string>
    <string name="About_your_habit">来指定自己的计划吧</string>
    <string name="Keep">坚持天数:</string>
    <string name="Repeat">重复频率:</string>
    <string name="Classify">分类:</string>
    <string name="Alarm">闹钟:</string>
    <string name="Confirm">确认</string>
    <string name="Cancel">取消</string>
    <string name="User_Name">用户名:</string>
    <string name="User_Pass">密码:</string>
    <string name="User_Pass_Re">确认密码:</string>
    <string name="return_login_page">返回登陆页</string>
    <string name="Rmember_the_pass">免密登录</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="random_avater">随机头像</string>
    <string name="no_award">感谢参与</string>
    <string name="purple_avatar">紫魔</string>
    <string name="green_avatar">碧神</string>


</resources>