<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Habit"

            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="55sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:src="@drawable/robot"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AC"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="55sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/User_Name"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/input">

            <EditText
                android:id="@+id/account"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="24dp"
                android:background="@null"
                android:inputType="text"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/User_Pass"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/input">

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft ="24dp"
                android:background="@null"
                android:inputType="textPassword"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <CheckBox
            android:id="@+id/checked_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rmember_the_pass"
            />
    </LinearLayout>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <Button
        android:id="@+id/login_bnt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:elevation="1px"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/signUp_bnt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/signup"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/forgetPassword_bnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/forgot_password"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:textColor="#3366FF"/>
    </LinearLayout>
</LinearLayout>