<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RankFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/touxiang"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"

                android:src="@drawable/robot" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/touxiang"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="战力值"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_sex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_ban" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_dormitory" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_bed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_below="@id/touxiang"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/toukui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/touxiang"
                    android:layout_weight="1"
                    android:src="@drawable/toukui" />

                <ImageView
                    android:id="@+id/weapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/touxiang"
                    android:layout_toRightOf="@id/zuxue"
                    android:layout_weight="1"
                    android:src="@drawable/weapon" />


                <ImageView
                    android:id="@+id/zuxue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/touxiang"
                    android:layout_toRightOf="@id/jiazhou"
                    android:layout_weight="1"
                    android:src="@drawable/zuxue" />

                <ImageView
                    android:id="@+id/jiazhou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/touxiang"
                    android:layout_toRightOf="@id/toukui"
                    android:layout_weight="1"
                    android:src="@drawable/jiazhou" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/xiangqing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:text="Exchange"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_allweapons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/xiangqing"
            android:layout_marginLeft="10dp"></androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>
</RelativeLayout>